# internal/models/user_model.go
@@ -45,3 +45,10 @@ type UserResponse struct {
 	RefreshToken string    `json:"refresh_token"`
 	UpdatedAt    time.Time `json:"updated_at"`
 }
+
+type UserRequest struct {
+	Name     string `json:"name" validate:"required,min=2,max=30"`
+	Email    string `json:"email" validate:"required,email"`
+	Phone    string `json:"phone" validate:"required"`
+	Password string `json:"password" validate:"required,min=6"`
+}
